<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:padding="10dp"
    tools:context="com.example.ashu.programmingpie.AboutUs_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="26dp"
            android:layout_gravity="center"
            android:background="@drawable/icon_image"
            android:contentDescription="@string/aboutus_image" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/think_java"
            android:textStyle="bold"
            android:textSize="30sp"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:gravity="center"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="@color/colorGreen"
              android:textSize="20sp"
              android:gravity="center"
              android:text="developed and designed by: "/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGreen"
            android:textSize="20sp"
            android:gravity="center"
            android:text="ITES&amp;M Batch-2015-18."/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/colorAccent"
            android:text="@string/application_for_java"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="10dp"
            android:textColor="@color/colorBlack"
            android:text="@string/no_need_to_carry_books_for_java_programming_this_app_enables_you_to_carry_basic_tutorial_in_your_android"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlack"
            android:text="@string/it_contains_about_100_program_many_exam_questions_also"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlack"
            android:text="@string/this_app_has_a_very_simple_user_interface_and_the_contents_can_be_easily_understood_by_the_users"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlack"
            android:text="@string/this_will_definitely_help_i_for_preparing_for_interview_tests_and_in_many_more_ways"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlack"
            android:text="@string/wherever_and_whenever_you_require_any_information_about_java_you_are_just_a_click_away"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_the_best_guys"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@color/colorBlack"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorGreen"
            android:gravity="center"
            android:text="@string/resourse_help"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:gravity="center"
            android:text="@string/sameer_ansari"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBrown"
            android:gravity="center"
            android:text="@string/monu_gupta"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorRed"
            android:gravity="center"
            android:text="@string/lucky_singh"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorYellow"
            android:gravity="center"
            android:text="@string/dheeraj_yadav"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorteal2"
            android:gravity="center"
            android:layout_marginBottom="40dp"
            android:text="@string/manish_sharma"/>

    </LinearLayout>
</ScrollView>
